fixed image size on mobile

--- a/pages/checkout/index.module.scss
+++ b/pages/checkout/index.module.scss
@@ -72,3 +72,13 @@
     color: rgba(0, 0, 0, 0.65);
     transform: translateY(0);
   }
+
+  .imageContainer{
+    width: 100px;
+    height: 100px;
+  }
+
+  .image{
+    width: 100px;
+    height: 100px;
+  }
